# paiclone

./: .gitignore  Cargo.toml
migrations/: 20241001210656_users.sql
src/: error.rs  http.rs  infra.rs  lib.rs  main.rs
src/controller/: home.rs
src/http/: response.rs
src/infra/: state.rs  template.rs
statics/favicon/: site.webmanifest
templates/: layout.html
templates/home/: index.html
