[package]
name = "paiclone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1.40.0", features = ["full"] }
axum        = { version = "0.7.6" }
sqlx        = { version = "0.8.2", features = [ "runtime-tokio", "migrate", "sqlite" ] }
tower       = { version = "0.5.1", features = [ "util" ] }
tera        = { version = "1.20.0" }
lazy_static = { version = "1.5.0" }

[dev-dependecies]
cucumber = { version = "0.21.1" }

[[test]]
name = "paiclone"
harness = false
