[package]
name = "paiclone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1.41.1", features = ["full"] }
axum        = { version = "0.7.9" }
sqlx        = { version = "0.8.2", features = [ "runtime-tokio", "migrate", "sqlite" ] }
tower       = { version = "0.5.1", features = [ "util" ] }
tower-http  = { version = "0.6.2", features = [ "compression-full", "decompression-full", "fs" ] }
tera        = { version = "1.20.0" }
lazy_static = { version = "1.5.0" }
derive_more = { version = "1.0.0", features = [ "from" ] }

tracing            = { version = "0.1.40", features = [ "attributes" ] }
tracing-subscriber = { version = "0.3.18" }


[dev-dependencies]
cucumber = { version = "0.21.1" }

[[test]]
name = "paiclone"
harness = false
